--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_manage_plugin_admin_features.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_manage_plugin_admin_features.html
@@ -37,7 +37,7 @@
             <tbody>
                 <#if admin_features?? > <#list admin_features as feature >
                 <tr>
-                    <td>${feature.pluginFeatureLabel}</td>
+                    <td>${feature.pluginFeatureTitle} (${feature.pluginFeatureName})</td>
 
                     <td>${feature.pluginFeatureLevel}</td>
                     <td>
