--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/templates/pluginwizard_properties_keys.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/templates/pluginwizard_properties_keys.html
@@ -2,8 +2,8 @@ plugin.description
 plugin.provider
 
 <#list features as feature>
-adminFeature.${feature.pluginFeatureLabel?lower_case}.name
-adminFeature.${feature.pluginFeatureLabel?lower_case}.description
+adminFeature.${feature.pluginFeatureName?lower_case}.name
+adminFeature.${feature.pluginFeatureName?lower_case}.description
 </#list>
 
 manage_${plugin_name?lower_case}s.tableLabel
