--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/templates/pluginwizard_xml_template.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/templates/pluginwizard_xml_template.html
@@ -19,11 +19,11 @@
     <admin-features>
     <#list features as feature >
         <admin-feature>
-            <feature-id>${feature.pluginFeatureLabel}</feature-id>
-            <feature-title>${plugin.pluginName}.adminFeature.${feature.pluginFeatureLabel?lower_case}.name</feature-title>
-            <feature-description>${plugin.pluginName}.adminFeature.${feature.pluginFeatureLabel?lower_case}.description</feature-description>
+            <feature-id>${feature.pluginFeatureRight}</feature-id>
+            <feature-title>${plugin.pluginName}.adminFeature.${feature.pluginFeatureName?lower_case}.name</feature-title>
+            <feature-description>${plugin.pluginName}.adminFeature.${feature.pluginFeatureName?lower_case}.description</feature-description>
             <feature-level>${feature.pluginFeatureLevel}</feature-level>
-            <feature-url>${feature.pluginFeatureUrl}</feature-url>
+            <feature-url>jsp/admin/plugins/${plugin.pluginName}/${feature.pluginFeatureName}.jsp</feature-url>
             <feature-icon-url></feature-icon-url>
       </admin-feature>
       </#list>
