PLUGINWIZARD-39 : Bootstrap integratrion for Lutece v4 - Work in progress
git-svn-id: http://dev.lutece.paris.fr/svn/lutece/portal/trunk/plugins/technical/plugin-pluginwizard@46428 bab10101-e421-0410-a517-8ce0973de3ef

--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_modify_admin_feature.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_modify_admin_feature.html
@@ -38,14 +38,14 @@
                     <label class="control-label">#i18n{pluginwizard.pluginwizard_modify_admin_feature.labelFeatureName} :                            
                     </label>                               
                     <div class="controls">                                                              	                              
-                        <input class="input-xlarge" type="text" name="feature_url" value="${feature.pluginFeatureName}" /> 				                                                                        
+                        <input class="input-xlarge" type="text" name="feature_name" value="${feature.pluginFeatureName}" /> 				                                                                        
                     </div>                                                                                                                                                                      	  				                     
                 </div>   
 
                 <div class="control-group">
                     <label class="control-label">#i18n{pluginwizard.pluginwizard_modify_admin_feature.labelFeatureManagement} : </label>                     
                     <div class="controls">               
-                        <input type="text" name="feature_label" value="${feature.pluginFeatureRight}" />                                 
+                        <input type="text" name="feature_right" value="${feature.pluginFeatureRight}" />                                 
                     </div> 
                 </div>
 
