--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_create_admin_feature.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_create_admin_feature.html
@@ -35,14 +35,14 @@
                     <label class="control-label" >#i18n{pluginwizard.pluginwizard_create_admin_feature.labelFeatureName} :         
                     </label>          
                     <div class="controls">            
-                        <input class="input-xlarge" type="text" name="feature_url" value="Manage${plugin_model.pluginName?cap_first}" />                     
+                        <input class="input-xlarge" type="text" name="feature_name" value="Manage${plugin_model.pluginName?cap_first}" />                     
                     </div>             
                 </div> 
 
                 <div class="control-group">
                     <label class="control-label">#i18n{pluginwizard.pluginwizard_create_admin_feature.labelFeatureManagement} : </label>                
                     <div class="controls">    
-                        <input type="text" name="feature_label" value="${plugin_model.pluginName?upper_case}_MANAGEMENT"  />      
+                        <input type="text" name="feature_right" value="${plugin_model.pluginName?upper_case}_MANAGEMENT"  />      
                     </div>    
                 </div>
 
