--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/templates/pluginwizard_jspbean_template.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/templates/pluginwizard_jspbean_template.html
@@ -94,7 +94,7 @@ public class ${feature_name}JspBean extends PluginAdminPageJspBean
     private static final String TEMPLATE_MODIFY_${business_class.businessClassTemplateDeclaration}="/admin/plugins/${plugin_model.pluginName}/modify_${business_class.businessClassTemplate}.html";
 </#if>    
 </#list>
-    private static final String TEMPLATE_MANAGE_${plugin_model.nameMainTemplate}S="/admin/plugins/${plugin_model.pluginName}/manage_${plugin_model.pluginName}.html";
+    private static final String TEMPLATE_MANAGE_${plugin_model.nameMainTemplate}S="/admin/plugins/${plugin_model.pluginName}/${feature_name?lower_case}.html";
 
 
 // Properties for page titles
