PLUGINWIZARD-39 : Bootstrap integratrion for Lutece v4 - Work in progress
git-svn-id: http://dev.lutece.paris.fr/svn/lutece/portal/trunk/plugins/technical/plugin-pluginwizard@46493 bab10101-e421-0410-a517-8ce0973de3ef

--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_modify_plugin_description.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_modify_plugin_description.html
@@ -30,21 +30,21 @@
                 <div class="control-group">
                     <label class="control-label" >#i18n{pluginwizard.pluginwizard_create_plugin_description.labelPluginDescription} : </label>
                     <div class="controls">
-                        <input class="input-xlarge" type="text" name="plugin_description" value="<#if plugin_model.pluginName??>${plugin_model.pluginDescription}</#if>" />
+                        <input class="input-xlarge" type="text" name="plugin_description" value="<#if plugin_model.pluginDescription??>${plugin_model.pluginDescription}</#if>" />
                     </div>
                 </div>
 
                 <div class="control-group">
                     <label class="control-label" >#i18n{pluginwizard.pluginwizard_create_plugin_description.labelPluginProvider} : </label>
                     <div class="controls">
-                        <input class="input-xlarge" type="text" name="plugin_provider" value="<#if plugin_model.pluginName??>${plugin_model.pluginProvider}</#if>" />
+                        <input class="input-xlarge" type="text" name="plugin_provider" value="<#if plugin_model.pluginProvider??>${plugin_model.pluginProvider}</#if>" />
                     </div>
                 </div>
 
                <div class="control-group">
                     <label class="control-label" >#i18n{pluginwizard.pluginwizard_create_plugin_description.labelPluginVersion} : </label>       
                     <div class="controls">
-                        <input class="input-small" type="text" name="version"  value="${plugin_model.pluginVersion}" size="30" />
+                        <input class="input-small" type="text" name="version"  value="<#if plugin_model.pluginVersion??>${plugin_model.pluginVersion}</#if>" size="30" />
                     </div>                                                                              
                 </div>
 
