PLUGINWIZARD-39 : Bootstrap integratrion for Lutece v4 - Work in progress
git-svn-id: http://dev.lutece.paris.fr/svn/lutece/portal/trunk/plugins/technical/plugin-pluginwizard@46733 bab10101-e421-0410-a517-8ce0973de3ef

--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_create_plugin.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_create_plugin.html
@@ -10,8 +10,7 @@
         <form class="form form-horizontal" method="post" name="generate" >               
             <fieldset>  	 		
                 <legend>
-                    #i18n{pluginwizard.pluginwizard_create_plugin.pageTitle} - #i18n{pluginwizard.pluginwizard_create_plugin.labelStepOf}   
-                    #i18n{pluginwizard.pluginwizard_create_plugin_application.labelCreationStep}      
+                    #i18n{pluginwizard.pluginwizard_create_plugin.pageTitle}      
                 </legend>                 
 
                 <input type="hidden" name="page" value="wizard" />			
