--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_manage_business_classes.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_manage_business_classes.html
@@ -13,7 +13,7 @@
 
     <div class="span8">        
 
-        <h4>#i18n{pluginwizard.pluginwizard_manage_business_classes.pageTitle} - #i18n{pluginwizard.pluginwizard_create_plugin.labelStepOf}   #i18n{pluginwizard.pluginwizard_create_plugin_application.labelDescriptionStep}</h4>                 
+        <h4>#i18n{pluginwizard.pluginwizard_manage_business_classes.pageTitle} </h4>                 
 
         <div class="pull-right"> 
 
