--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_manage_plugin_applications.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_manage_plugin_applications.html
@@ -10,7 +10,7 @@
     </div>
 
     <div class="span8">
-        <h4>#i18n{pluginwizard.pluginwizard_manage_plugin_applications.pageTitle} - #i18n{pluginwizard.pluginwizard_manage_plugin_applications.labelXPageStep} </h4>                 
+        <h4>#i18n{pluginwizard.pluginwizard_manage_plugin_applications.pageTitle} </h4>                 
 
         <div class="pull-right"> 
             <form class="default-form" method="post" name="generate"
