--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_manage_plugin_portlets.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_manage_plugin_portlets.html
@@ -10,7 +10,7 @@
     </div>
 
     <div class="span8">
-        <h4>#i18n{pluginwizard.pluginwizard_manage_plugin_portlets.pageTitle} - #i18n{pluginwizard.pluginwizard_manage_plugin_portlets.labelPortletsStep}</h4>
+        <h4>#i18n{pluginwizard.pluginwizard_manage_plugin_portlets.pageTitle}</h4>
 
         <div class="pull-right"> 
             <form class="default-form" method="post" name="generate"
