--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_manage_plugin_admin_features.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_manage_plugin_admin_features.html
@@ -11,7 +11,7 @@
     </div>
 
     <div class="span8">
-        <h4>#i18n{pluginwizard.pluginwizard_manage_plugin_admin_features.pageTitle} - #i18n{pluginwizard.pluginwizard_manage_plugin_admin_features.labelDescriptionStep}</h4>                 
+        <h4>#i18n{pluginwizard.pluginwizard_manage_plugin_admin_features.pageTitle}</h4>                 
 
         <div class="pull-right">
             <form class="default-form" method="post" name="generate" action="jsp/site/Portal.jsp?page=pluginwizard">
