--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_modify_plugin_description.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_modify_plugin_description.html
@@ -12,8 +12,7 @@
     <div class="span8">
         <form class="form form-horizontal well" method="post" name="generate" action="jsp/site/Portal.jsp" >    
             <fieldset>
-                <legend>#i18n{pluginwizard.pluginwizard_create_plugin_description.pageTitle} - #i18n{pluginwizard.pluginwizard_create_plugin.labelStepOf}   #i18n{pluginwizard.pluginwizard_create_plugin_application.labelDescriptionStep}
-                </legend>                 
+                <h4>#i18n{pluginwizard.pluginwizard_create_plugin_description.pageTitle}</h4>                 
 
                 <input type="hidden" name="page" value="pluginwizard" />                
                 <input type="hidden" name="action" value="do_modify_plugin_description" />                  
