--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/templates/pluginwizard_jspbean_business_template.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/templates/pluginwizard_jspbean_business_template.html
@@ -46,13 +46,11 @@ import fr.paris.lutece.util.html.Paginator;
 import fr.paris.lutece.util.url.UrlItem;
 
 import fr.paris.lutece.portal.service.template.AppTemplateService;
-import fr.paris.lutece.portal.web.admin.PluginAdminPageJspBean;
 import fr.paris.lutece.util.html.HtmlTemplate;
 
 import java.util.HashMap;
 
 import java.util.List;
-import java.util.ArrayList;
 import java.util.Map;
 import javax.servlet.http.HttpServletRequest;
 
@@ -60,7 +58,7 @@ import javax.servlet.http.HttpServletRequest;
 /**
  * This class provides the user interface to manage ${business_class.businessClass} features ( manage, create, modify, remove )
  */
-public class ${business_class.businessClass}JspBean extends PluginAdminPageJspBean
+public class ${business_class.businessClass}JspBean extends ${feature_name}JspBean
 {
 
     ////////////////////////////////////////////////////////////////////////////
@@ -71,8 +69,14 @@ public class ${business_class.businessClass}JspBean extends PluginAdminPageJspBe
     private static final String TEMPLATE_CREATE_${business_class.businessClassTemplateDeclaration}="/admin/plugins/${plugin_model.pluginName}/create_${business_class.businessClassTemplate}.html";
     private static final String TEMPLATE_MODIFY_${business_class.businessClassTemplateDeclaration}="/admin/plugins/${plugin_model.pluginName}/modify_${business_class.businessClassTemplate}.html";
 
+
+    // Parameters
+<#list business_class.attributes as attribute>
+    private static final String PARAMETER_${business_class.businessClassParamDeclaration}_${attribute.attributeName?upper_case}="${business_class.businessClassParam}_${attribute.attributeName?lower_case}";
+</#list>
+
+
     // Properties for page titles
-    private static final String PROPERTY_PAGE_TITLE_MANAGE_${plugin_model.pluginName?upper_case}S = "${plugin_model.pluginName?lower_case}.manage_${plugin_model.pluginName?lower_case}s.pageTitle";
     private static final String PROPERTY_PAGE_TITLE_MANAGE_${business_class.businessClass?upper_case}S = "${plugin_model.pluginName?lower_case}.manage_${business_class.businessClass?lower_case}s.pageTitle";
     private static final String PROPERTY_PAGE_TITLE_MODIFY_${business_class.businessClass?upper_case} = "${plugin_model.pluginName?lower_case}.modify_${business_class.businessClass?lower_case}.pageTitle";
     private static final String PROPERTY_PAGE_TITLE_CREATE_${business_class.businessClass?upper_case} = "${plugin_model.pluginName?lower_case}.create_${business_class.businessClass?lower_case}.pageTitle";
@@ -87,6 +91,7 @@ public class ${business_class.businessClass}JspBean extends PluginAdminPageJspBe
 
     // Properties
     private static final String MESSAGE_CONFIRM_REMOVE_${business_class.businessClass?upper_case} = "${plugin_model.pluginName}.message.confirmRemove${business_class.businessClass?cap_first}";
+    private static final String PROPERTY_DEFAULT_LIST_${business_class.businessClass?upper_case}_PER_PAGE = "${plugin_model.pluginName}.list${business_class.businessClass?cap_first}s.itemsPerPage";
  
 
     /**
